Platform 2.37

* Library Upgrades

  - Jetty to 9.4.32 (was 9.4.24)

Platform 2.36

* Library Upgrades
  - Base Docker image to proofpoint/platform-zulu-11:1.9
    based on 11.0.8

Platform 2.35

* Library Upgrades
  - Base Docker image to proofpoint/platform-zulu-11:1.8
    update libsystemd0 to 241-7~deb10u4 for CVE-2020-1712

Platform 2.34

* Build

  We now use the SONAR_HOST_URL instead of a .build-sonar file to enable
  SonarQube reporting.

Platform 2.33

* Build

  We now set the Sonar projectKey when Sonar is enabled.

Platform 2.32

* Library Upgrades
  - Base Docker image to proofpoint/platform-zulu-11:1.7
    updates libgnutls30 to 3.6.7-4+deb10u4 for CVE-2020-13777

Platform 2.30

* Library Upgrades

  - Guava to 29.0-jre (was 28.2-jre)
  - Jackson to 2.11.0 (was 2.10.0) (fixes deserialization vulnerabilities
    when using @JsonTypeInfo or "default typing")

Platform 2.29

* Build

  We now enable JaCoCo code coverage of (Maven) integration tests.

  If the project has a .build-sonar file we now report code coverage to
  SonarQube.

* Launcher

  We moved the StartLimitIntervalSecs setting back from [Unit] to [Service] and
  changed its name to StartLimitInterval.

Platform 2.28

* Library Upgrades

  - Base Docker image to proofpoint/platform-zulu-11:1.6
     based on azul/zulu-openjdk-debian:11.0.7-11.39.15
    (was proofpoint/platform-zulu-11:1.5)

Platform 2.27

* Library Upgrades

  - Guice to 4.2.3 (was 4.2.2)

* Maven plugin upgrades

  - jacoco-maven-plugin to 0.8.5 (was 0.8.4)
  - sonar-maven-plugin 3.7.0.1746 (previously unspecified)
  - build-helper-maven-plugin to 3.1.0 (was 3.0.0)
  - maven-assembly-plugin to 3.2.0 (was 3.1.1)
  - maven-javadoc-plugin to 3.2.0 (was 3.1.0)
  - maven-jar-plugin to 3.2.0 (was 3.1.0)
  - maven-source-plugin to 3.2.1 (was 3.1.0)
  - dependency-scope-maven-plugin to 0.10 (was 0.8)
  - spotbugs-maven-plugin to 4.0.0 (was 3.1.12)
  - maven-site-plugin to 3.9.0 (was 3.7.1)